Ändrade i serviceworker och flyttade script i .html
Kommenterade bort filer  i serviceworker  som inte finns än och skrev till kod för att använda kod för att använda NFC läsaren genom serviceworker. Flyttade script taggen i index.html så att den hamnar längst ner.

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
 	"name": "Bord",
 	"short_name": "Bord",
 	"display": "standalone",
-	"start_url": "./?utm_source=pwa_install",
 	"scope": ".",
 	"theme_color": "#000",
 	"background_color": "#000",
+    "start_url": "index.html",
 	"icons":[
         {
             "src": "android-chrome-192x192.png",
