--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
 	"theme_color": "#000",
 	"background_color": "#000",
     "start_url": "index.html",
+    "id":"/bord__frontend/index.html",
 	"icons":[
         {
             "src": "android-chrome-192x192.png",
