--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
     "id":"/bord__frontend/index.html",
 	"icons":[
         {
-            "src": "android-chrome-192x192.png",
+            "src": "image/icons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "android-chrome-512x512.png",
+            "src": "image/icons/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
